--- a/css/main.css
+++ b/css/main.css
@@ -351,6 +351,7 @@ template {
 }
 
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
 }
@@ -372,5 +373,93 @@ body {
   padding: 0;
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.chats {
+  background-image: url(../images/bg-image.png);
+  height: 700px;
+  padding-left: 0;
+  padding-bottom: 0;
+  padding-top: 0;
+  padding-right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+  margin-bottom: 0;
+  margin-top: 0;
+  margin-right: auto;
+  background-color: pink;
+  position: relative;
+  max-width: 500px;
+}
+
+.chats__flow {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding-left: 12px;
+  padding-bottom: 24px;
+  padding-top: 0;
+  padding-right: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.chat {
+  color: #333333;
+  min-width: 200px;
+  border-radius: 4px;
+  margin-left: 0;
+  margin-bottom: 4px;
+  margin-top: 4px;
+  margin-right: 0;
+  padding-left: 12px;
+  padding-bottom: 12px;
+  padding-top: 12px;
+  padding-right: 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: white;
+  position: relative;
+  max-width: 80%;
+}
+
+.chat::before {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  display: block;
+  border-top: 12px solid #ffffff;
+  border-right: 12px solid transparent;
+  border-bottom: 12px solid transparent;
+  border-left: 12px solid transparent;
+}
+
+.chat__right {
+  text-align: right;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+.chat__right::before {
+  top: 0;
+  right: -7px;
+  bottom: none;
+  left: none;
+}
+
+.chat__left::before {
+  top: 0;
+  right: none;
+  bottom: none;
+  left: -7px;
 }
 /*# sourceMappingURL=main.css.map */
