--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "variables";
 @import "normalize";
 @import "fonts";
+@import "blocks/mixins";
 @import "general";
 @import "blocks/blocks";
