--- a/css/main.css
+++ b/css/main.css
@@ -402,6 +402,9 @@ body {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   padding-left: 12px;
   padding-bottom: 24px;
   padding-top: 0;
@@ -413,7 +416,6 @@ body {
 
 .chat {
   color: #333333;
-  min-width: 200px;
   border-radius: 4px;
   margin-left: 0;
   margin-bottom: 4px;
@@ -445,8 +447,7 @@ body {
 
 .chat__right {
   text-align: right;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  margin-left: auto;
 }
 
 .chat__right::before {
